--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Royal Taxi Carshalton London - Coming Soon</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+            color: #333;
+        }
+
+        .container {
+            max-width: 600px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #4CAF50;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        #countdown {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>Royal Taxi Carshalton London</h1>
+    <p>We're excited to announce that we are launching very soon!</p>
+    <p>Get ready for a royal experience in transportation services.</p>
+    <div id="countdown">Launching in: <span id="timer"></span></div>
+</div>
+
+<script>
+    // Set the launch date (YYYY, MM-1, DD, HH, MM, SS)
+    const launchDate = new Date(2024, 0, 15, 12, 0, 0);
+
+    function updateCountdown() {
+        const now = new Date().getTime();
+        const timeRemaining = launchDate - now;
+
+        const days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
+        const hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+
+        document.getElementById("timer").innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+
+        if (timeRemaining <= 0) {
+            document.getElementById("timer").innerHTML = "We have launched!";
+        }
+    }
+
+    // Update the countdown every second
+    setInterval(updateCountdown, 1000);
+
+    // Initial call to set the countdown immediately
+    updateCountdown();
+</script>
+
+</body>
+</html>
