--- a/index.html
+++ b/index.html
@@ -1,82 +1,98 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Royal Taxi Carshalton London - Coming Soon</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f8f8;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            text-align: center;
-            color: #333;
-        }
+      body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background: linear-gradient(to bottom, #4caf50, #2196f3);
+        color: #fff;
+      }
 
-        .container {
-            max-width: 600px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+      .overlay {
+        background: rgba(0, 0, 0, 0.7);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
 
-        h1 {
-            color: #4CAF50;
-        }
+      .container {
+        max-width: 600px;
+        padding: 20px;
+        background-color: rgba(255, 255, 255, 0.9);
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        text-align: center;
+        position: relative;
+        z-index: 1;
+        animation: fadeInUp 1s ease;
+      }
 
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
+      h1 {
+        background-color: #4caf50;
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 10px;
+        color: #fff;
+      }
 
-        #countdown {
-            font-size: 24px;
-            margin-top: 20px;
+      p {
+        font-size: 18px;
+        line-height: 1.6;
+        margin-bottom: 20px;
+        color: #333; /* Adjusted text color */
+      }
+
+      .launching-message {
+        font-size: 24px;
+        font-weight: bold;
+        color: #4caf50;
+        margin-bottom: 10px;
+      }
+
+      /* Animation */
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
         }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="overlay"></div>
+    <div class="container">
+      <p class="launching-message">Launching Soon</p>
+      <h1>Royal Taxi Carshalton London</h1>
+      <p>Welcome to the future of transportation in London!</p>
+      <p>Embark on a royal journey with our premium taxi services.</p>
+      <p>Experience comfort, reliability, and style like never before.</p>
+      <p>
+        We are committed to providing exceptional taxi services that redefine
+        your travel experience.
+      </p>
+    </div>
 
-<div class="container">
-    <h1>Royal Taxi Carshalton London</h1>
-    <p>We're excited to announce that we are launching very soon!</p>
-    <p>Get ready for a royal experience in transportation services.</p>
-    <div id="countdown">Launching in: <span id="timer"></span></div>
-</div>
-
-<script>
-    // Set the launch date (YYYY, MM-1, DD, HH, MM, SS)
-    const launchDate = new Date(2024, 0, 15, 12, 0, 0);
-
-    function updateCountdown() {
-        const now = new Date().getTime();
-        const timeRemaining = launchDate - now;
-
-        const days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
-        const hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
-        const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
-
-        document.getElementById("timer").innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
-
-        if (timeRemaining <= 0) {
-            document.getElementById("timer").innerHTML = "We have launched!";
-        }
-    }
-
-    // Update the countdown every second
-    setInterval(updateCountdown, 1000);
-
-    // Initial call to set the countdown immediately
-    updateCountdown();
-</script>
-
-</body>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
