--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Royal Taxi Carshalton London - Coming Soon</title>
+    <title>Royal Cabs Carshalton London - Coming Soon</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -82,12 +82,12 @@
     <div class="overlay"></div>
     <div class="container">
       <p class="launching-message">Launching Soon</p>
-      <h1>Royal Taxi Carshalton London</h1>
+      <h1>Royal Cabs Carshalton London</h1>
       <p>Welcome to the future of transportation in London!</p>
-      <p>Embark on a royal journey with our premium taxi services.</p>
+      <p>Embark on a royal journey with our premium cabs services.</p>
       <p>Experience comfort, reliability, and style like never before.</p>
       <p>
-        We are committed to providing exceptional taxi services that redefine
+        We are committed to providing exceptional cabs services that redefine
         your travel experience.
       </p>
     </div>
